--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT = 3500
-DATABASE_URI =
+DATABASE_URI = mongodb+srv://ingsantana36:cCXaJpIpUzwAyYVa@cluster0.ac1os9s.mongodb.net/?retryWrites=true&w=majority
